--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">YunApps</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!-new</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
